src/test/deca/context/valid/classes/class_with_string_field.deca
// Description :
//    Classe contenant un champ de type string.
//
// Resultats :
//    OK

class A {
    string s;
}

{
}

